--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -223,7 +223,7 @@
     <script>
         // IMPORTANT: Replace 'YOUR_RENDER_BACKEND_URL' with your actual Render backend service URL.
         // Example: const API_BASE_URL = 'https://ceorater-backend-abcdef.onrender.com';
-        const API_BASE_URL = 'YOUR_RENDER_BACKEND_URL'; 
+        const API_BASE_URL = 'https://ceorater-backend.onrender.com/';
 
         const loginScreen = document.getElementById('login-screen');
         const adminPanel = document.getElementById('admin-panel');
