--- a/index.html
+++ b/index.html
@@ -1,98 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CEORater - NASDAQ 100 CEO Rankings</title>
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CEORater – NASDAQ‑100 CEO Rankings</title>
+  <!-- Tailwind (stand‑alone CDN build) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Font Awesome for icons (optional – remove if unused) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <!-- Your site‑specific CSS overrides (optional) -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Papa Parse → CSV → JSON helper (must load *before* script.js) -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 </head>
-<body class="text-gray-800">
-
-    <div class="container mx-auto p-4 md:p-8">
-
-        <!-- Header -->
-        <header class="mb-8">
-            <div class="flex flex-col md:flex-row justify-between items-start md:items-center">
-                <div>
-                    <h1 class="text-3xl font-bold text-gray-900">NASDAQ 100 CEO Rankings</h1>
-                    <p class="text-gray-500 mt-1">An analysis of leadership performance and insider signals.</p>
-                </div>
-                <div class="text-sm text-gray-500 mt-4 md:mt-0 flex items-center">
-                    <span class="w-2 h-2 bg-green-500 rounded-full mr-2 animate-pulse"></span>
-                    Updated <span class="font-semibold mx-1">2 minutes ago</span>
-                </div>
-            </div>
-        </header>
-
-        <!-- Filter Tabs -->
-        <div class="mb-6">
-            <div class="border-b border-gray-200">
-                <nav class="-mb-px flex space-x-6 overflow-x-auto" id="filterTabs">
-                    <button data-filter="all" class="whitespace-nowrap py-4 px-1 border-b-2 font-semibold text-purple-600 border-purple-600 text-sm">All CEOs</button>
-                    <button data-filter="top" class="whitespace-nowrap py-4 px-1 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 text-sm">Top Performers</button>
-                    <button data-filter="ownership" class="whitespace-nowrap py-4 px-1 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 text-sm">High Ownership</button>
-                    <button data-filter="insider" class="whitespace-nowrap py-4 px-1 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 text-sm">Recent Insider Buys</button>
-                    <button data-filter="flags" class="whitespace-nowrap py-4 px-1 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 text-sm">Red Flags</button>
-                </nav>
-            </div>
+<body class="font-[Inter] text-gray-800">
+  <div class="mx-auto max-w-7xl p-4 md:p-8">
+    <!-- Header -------------------------------------------------->
+    <header class="mb-8">
+      <div class="flex flex-col items-start justify-between md:flex-row md:items-center">
+        <div>
+          <h1 class="text-3xl font-bold text-gray-900">NASDAQ‑100 CEO Rankings</h1>
+          <p class="mt-1 text-gray-500">Leadership performance &amp; insider signals</p>
         </div>
-
-        <!-- Rankings Table -->
-        <div class="bg-white shadow-md rounded-lg overflow-hidden">
-            <div class="overflow-x-auto">
-                <table class="min-w-full divide-y divide-gray-200">
-                    <thead class="bg-gray-50">
-                        <tr>
-                            <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase tracking-wider">Rank</th>
-                            <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase tracking-wider">CEO & Company</th>
-                            <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase tracking-wider">Tenure</th>
-                            <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase tracking-wider">Returns</th>
-                            <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase tracking-wider">Ownership</th>
-                            <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase tracking-wider">Insider Score</th>
-                            <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase tracking-wider">Recent Media</th>
-                            <th scope="col" class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase tracking-wider">Total Score</th>
-                        </tr>
-                    </thead>
-                    <tbody id="ceoTableBody" class="bg-white divide-y divide-gray-200">
-                        <!-- CEO data will be injected by script.js -->
-                    </tbody>
-                </table>
-            </div>
+        <div class="mt-4 flex items-center text-sm text-gray-500 md:mt-0">
+          <span class="mr-2 h-2 w-2 animate-pulse rounded-full bg-green-500"></span>
+          Updated <span id="lastUpdated" class="mx-1 font-semibold">just now</span>
         </div>
+      </div>
+    </header>
 
-        <!-- Footer -->
-        <footer class="mt-8 text-center text-xs text-gray-500">
-            <p class="mb-2">Methodology: The total score is a weighted average of stock returns, tenure, ownership, and insider trading activity.</p>
-            <div class="flex justify-center items-center space-x-4">
-                <span>Data Sources:</span>
-                <span class="font-semibold">Polygon.io</span>
-                <span class="font-semibold">SEC EDGAR</span>
-                <span class="font-semibold">YouTube API</span>
-            </div>
-        </footer>
+    <!-- Filter Tabs --------------------------------------------->
+    <div class="mb-6 border-b border-gray-200 overflow-x-auto">
+      <nav id="filterTabs" class="-mb-px flex space-x-6 whitespace-nowrap">
+        <button data-filter="all" class="tab-active">All CEOs</button>
+        <button data-filter="top">Top Performers</button>
+        <button data-filter="ownership">High Ownership</button>
+        <button data-filter="insider">Recent Insider Buys</button>
+        <button data-filter="flags">Red Flags</button>
+      </nav>
     </div>
 
-    <!-- Media Popup -->
-    <div id="mediaPopup" class="fixed top-0 right-0 h-full w-full max-w-md bg-white shadow-xl transform translate-x-full z-50 p-6">
-        <div class="flex justify-between items-center mb-6">
-            <h2 id="popupCeoName" class="text-2xl font-bold">Media Appearances</h2>
-            <button id="closePopup" class="text-gray-500 hover:text-gray-800 text-3xl leading-none">&times;</button>
-        </div>
-        <div id="popupMediaContent" class="space-y-4">
-            <!-- Media links will be injected by script.js -->
-        </div>
+    <!-- Rankings Table ------------------------------------------>
+    <div class="overflow-x-auto rounded-lg bg-white shadow-md">
+      <table class="min-w-full divide-y divide-gray-200 text-sm">
+        <thead class="bg-gray-50 text-xs font-bold uppercase tracking-wider text-gray-500">
+          <tr>
+            <th class="px-6 py-3 text-left">Rank</th>
+            <th class="px-6 py-3 text-left">CEO &amp; Company</th>
+            <th class="px-6 py-3 text-left">Tenure</th>
+            <th class="px-6 py-3 text-left">Returns</th>
+            <th class="px-6 py-3 text-left">Ownership</th>
+            <th class="px-6 py-3 text-left">Insider Score</th>
+            <th class="px-6 py-3 text-left">Recent Media</th>
+            <th class="px-6 py-3 text-left">Total Score</th>
+          </tr>
+        </thead>
+        <tbody id="ceoTableBody" class="divide-y divide-gray-200 bg-white">
+          <!-- rows injected by script.js -->
+        </tbody>
+      </table>
     </div>
-    <div id="popupOverlay" class="fixed inset-0 bg-black bg-opacity-50 hidden z-40"></div>
 
-    <!-- Custom JavaScript -->
-    <script src="script.js"></script>
+    <!-- Footer -------------------------------------------------->
+    <footer class="mt-8 text-center text-xs text-gray-500">
+      <p class="mb-2">Methodology: weighted blend of returns, tenure, ownership &amp; insider activity.</p>
+      <div class="flex justify-center space-x-4">
+        <span>Data Sources:</span>
+        <span class="font-semibold">Polygon.io</span>
+        <span class="font-semibold">SEC EDGAR</span>
+        <span class="font-semibold">YouTube API</span>
+      </div>
+    </footer>
+  </div>
 
+  <!-- Slide‑in Media Popup ------------------------------------->
+  <div id="popupOverlay" class="fixed inset-0 z-40 hidden bg-black/50"></div>
+  <div id="mediaPopup" class="fixed right-0 top-0 z-50 h-full max-w-md translate-x-full transform bg-white p-6 shadow-xl transition-transform duration-300">
+    <div class="mb-6 flex items-center justify-between">
+      <h2 id="popupCeoName" class="text-2xl font-bold">Media Appearances</h2>
+      <button id="closePopup" class="text-3xl leading-none text-gray-500 hover:text-gray-800">&times;</button>
+    </div>
+    <div id="popupMediaContent" class="space-y-4"></div>
+  </div>
+
+  <!-- Custom 🍀 JavaScript that builds the table -->
+  <script src="script.js"></script>
+
+  <!-- Inline tab styling for simplicity -->
+  <style>
+    #filterTabs button { @apply py-4 px-1 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 text-sm; }
+    #filterTabs .tab-active { @apply border-purple-600 text-purple-600 font-semibold; }
+  </style>
 </body>
 </html>
