--- a/index.html
+++ b/index.html
@@ -3,96 +3,163 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CEORater – NASDAQ‑100 CEO Rankings</title>
-  <!-- Tailwind (stand‑alone CDN build) -->
+  <title>CEORater – NASDAQ 100 CEO Rankings</title>
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Font Awesome for icons (optional – remove if unused) -->
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <!-- Your site‑specific CSS overrides (optional) -->
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- Papa Parse → CSV → JSON helper (must load *before* script.js) -->
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <!-- Supabase JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 </head>
-<body class="font-[Inter] text-gray-800">
-  <div class="mx-auto max-w-7xl p-4 md:p-8">
-    <!-- Header -------------------------------------------------->
-    <header class="mb-8">
-      <div class="flex flex-col items-start justify-between md:flex-row md:items-center">
-        <div>
-          <h1 class="text-3xl font-bold text-gray-900">NASDAQ‑100 CEO Rankings</h1>
-          <p class="mt-1 text-gray-500">Leadership performance &amp; insider signals</p>
-        </div>
-        <div class="mt-4 flex items-center text-sm text-gray-500 md:mt-0">
-          <span class="mr-2 h-2 w-2 animate-pulse rounded-full bg-green-500"></span>
-          Updated <span id="lastUpdated" class="mx-1 font-semibold">just now</span>
-        </div>
+<body class="bg-gray-100 font-sans">
+  <div class="container mx-auto p-6">
+    <header class="flex flex-col md:flex-row justify-between items-start md:items-center mb-8">
+      <div>
+        <h1 class="text-4xl font-bold text-gray-900">CEORater</h1>
+        <p class="text-gray-600 mt-1">NASDAQ 100 CEO Rankings & Performance Dashboard</p>
+      </div>
+      <div class="mt-4 md:mt-0 flex items-center text-sm text-gray-500">
+        <span class="w-2 h-2 animate-pulse rounded-full bg-green-500 mr-2"></span>
+        Updated <span id="lastUpdated" class="font-semibold">just now</span>
       </div>
     </header>
 
-    <!-- Filter Tabs --------------------------------------------->
-    <div class="mb-6 border-b border-gray-200 overflow-x-auto">
-      <nav id="filterTabs" class="-mb-px flex space-x-6 whitespace-nowrap">
-        <button data-filter="all" class="tab-active">All CEOs</button>
-        <button data-filter="top">Top Performers</button>
-        <button data-filter="ownership">High Ownership</button>
-        <button data-filter="insider">Recent Insider Buys</button>
-        <button data-filter="flags">Red Flags</button>
-      </nav>
-    </div>
+    <nav id="filterTabs" class="mb-6 border-b border-gray-200 flex space-x-6 overflow-x-auto text-sm">
+      <button data-filter="all" class="pb-2 border-b-2 border-purple-600 text-purple-600 font-semibold">All CEOs</button>
+      <button data-filter="top" class="pb-2 text-gray-500 hover:text-gray-700 hover:border-gray-300 border-b-2 border-transparent">Top Performers</button>
+      <button data-filter="ownership" class="pb-2 text-gray-500 hover:text-gray-700 hover:border-gray-300 border-b-2 border-transparent">High Ownership</button>
+      <button data-filter="insider" class="pb-2 text-gray-500 hover:text-gray-700 hover:border-gray-300 border-b-2 border-transparent">Recent Insider Buys</button>
+      <button data-filter="flags" class="pb-2 text-gray-500 hover:text-gray-700 hover:border-gray-300 border-b-2 border-transparent">Red Flags</button>
+    </nav>
 
-    <!-- Rankings Table ------------------------------------------>
-    <div class="overflow-x-auto rounded-lg bg-white shadow-md">
-      <table class="min-w-full divide-y divide-gray-200 text-sm">
-        <thead class="bg-gray-50 text-xs font-bold uppercase tracking-wider text-gray-500">
+    <div class="overflow-x-auto bg-white shadow rounded-lg">
+      <table class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-50">
           <tr>
-            <th class="px-6 py-3 text-left">Rank</th>
-            <th class="px-6 py-3 text-left">CEO &amp; Company</th>
-            <th class="px-6 py-3 text-left">Tenure</th>
-            <th class="px-6 py-3 text-left">Returns</th>
-            <th class="px-6 py-3 text-left">Ownership</th>
-            <th class="px-6 py-3 text-left">Insider Score</th>
-            <th class="px-6 py-3 text-left">Recent Media</th>
-            <th class="px-6 py-3 text-left">Total Score</th>
+            <th class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase">Rank</th>
+            <th class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase">CEO & Company</th>
+            <th class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase">Tenure</th>
+            <th class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase">Returns</th>
+            <th class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase">Ownership</th>
+            <th class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase">Insider Score</th>
+            <th class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase">Recent Media</th>
+            <th class="px-6 py-3 text-left text-xs font-bold text-gray-500 uppercase">Total Score</th>
           </tr>
         </thead>
-        <tbody id="ceoTableBody" class="divide-y divide-gray-200 bg-white">
-          <!-- rows injected by script.js -->
+        <tbody id="ceoTableBody" class="divide-y divide-gray-200 odd:bg-white even:bg-gray-50 hover:bg-gray-100">
+          <!-- Data rows populated via Supabase JS -->
         </tbody>
       </table>
     </div>
 
-    <!-- Footer -------------------------------------------------->
     <footer class="mt-8 text-center text-xs text-gray-500">
-      <p class="mb-2">Methodology: weighted blend of returns, tenure, ownership &amp; insider activity.</p>
-      <div class="flex justify-center space-x-4">
+      <p>Methodology: weighted blend of returns, tenure, ownership & insider activity.</p>
+      <div class="flex justify-center items-center space-x-4 mt-2">
         <span>Data Sources:</span>
-        <span class="font-semibold">Polygon.io</span>
-        <span class="font-semibold">SEC EDGAR</span>
-        <span class="font-semibold">YouTube API</span>
+        <span class="font-semibold">Supabase</span>
+        <span class="font-semibold">YouTube API</span>
       </div>
     </footer>
   </div>
 
-  <!-- Slide‑in Media Popup ------------------------------------->
-  <div id="popupOverlay" class="fixed inset-0 z-40 hidden bg-black/50"></div>
-  <div id="mediaPopup" class="fixed right-0 top-0 z-50 h-full max-w-md translate-x-full transform bg-white p-6 shadow-xl transition-transform duration-300">
-    <div class="mb-6 flex items-center justify-between">
-      <h2 id="popupCeoName" class="text-2xl font-bold">Media Appearances</h2>
-      <button id="closePopup" class="text-3xl leading-none text-gray-500 hover:text-gray-800">&times;</button>
-    </div>
-    <div id="popupMediaContent" class="space-y-4"></div>
-  </div>
+  <script>
+    // Initialize Supabase client
+    // TODO: Replace these with your Supabase project credentials
+const SUPABASE_URL = 'https://qxnljpbxhugsawinluwq.supabase.co';  
+const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF4bmxqcGJ4aHVnc2F3aW5sdXdxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTAwMTE2NjksImV4cCI6MjA2NTU4NzY2OX0.t1aG1JNeuanoOXKcs4CXLQALmLZiWCbdl9ICH2GVRu0';
+    
+    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  <!-- Custom 🍀 JavaScript that builds the table -->
-  <script src="script.js"></script>
+    // DOM shortcuts
+    const tbody = document.getElementById('ceoTableBody');
+    const filterTabs = document.getElementById('filterTabs');
+    const lastUpdated = document.getElementById('lastUpdated');
 
-  <!-- Inline tab styling for simplicity -->
-  <style>
-    #filterTabs button { @apply py-4 px-1 border-b-2 border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 text-sm; }
-    #filterTabs .tab-active { @apply border-purple-600 text-purple-600 font-semibold; }
-  </style>
+    let allRows = [];
+    let activeFilter = 'all';
+
+    // Helper functions
+    const pct = v => v !== null ? `${v.toFixed(2)}%` : 'N/A';
+    const tenure = d => {
+      if (!d) return 'N/A';
+      const start = new Date(d);
+      const now = new Date();
+      let yrs = now.getFullYear() - start.getFullYear();
+      let mos = now.getMonth() - start.getMonth();
+      if (mos < 0) { yrs--; mos += 12; }
+      return `${yrs} yrs, ${mos} mo`;
+    };
+
+    // Render table rows
+    function renderTable() {
+      tbody.innerHTML = '';
+      allRows
+        .filter(r => {
+          if (activeFilter === 'all') return true;
+          if (activeFilter === 'top') return r.total_score >= 80;
+          if (activeFilter === 'ownership') return r.equity_ownership_pct > 1;
+          if (activeFilter === 'insider') return r.insider_score > 0;
+          if (activeFilter === 'flags') return r.insider_score < 0;
+          return true;
+        })
+        .forEach((ceo, i) => {
+          const row = document.createElement('tr');
+          row.className = i % 2 ? 'bg-gray-50 hover:bg-gray-100' : 'hover:bg-gray-100';
+          row.innerHTML = `
+            <td class="px-6 py-4">${i+1}</td>
+            <td class="px-6 py-4">
+              <div class="font-semibold text-gray-900">${ceo.ceo_name}</div>
+              <div class="text-gray-500 text-sm">${ceo.company_name} (${ceo.ticker})</div>
+            </td>
+            <td class="px-6 py-4">${tenure(ceo.ceo_start_date)}</td>
+            <td class="px-6 py-4 ${ceo.total_stock_return >= 0 ? 'text-green-600' : 'text-red-600'} font-semibold">${pct(ceo.total_stock_return)}</td>
+            <td class="px-6 py-4">${ceo.equity_ownership_pct}%</td>
+            <td class="px-6 py-4">
+              <div class="w-24 bg-gray-200 rounded-full h-2.5">
+                <div class="h-2.5 rounded-full ${ceo.insider_score >= 70 ? 'bg-green-500' : ceo.insider_score >= 40 ? 'bg-yellow-500' : 'bg-red-500'}" style="width: ${ceo.insider_score}%"></div>
+              </div>
+            </td>
+            <td class="px-6 py-4">
+              ${ceo.youtube_urls.length > 0 ? `<button class="text-blue-600 underline text-sm" onclick="showVideos('${ceo.ceo_name}')">View (${ceo.youtube_urls.length})</button>` : '<span class="text-gray-400 text-sm">None</span>'}
+            </td>
+            <td class="px-6 py-4 font-semibold text-gray-900">${ceo.total_score}</td>
+          `;
+          tbody.appendChild(row);
+        });
+    }
+
+    // Fetch data from Supabase
+    async function loadData() {
+      const { data, error } = await supabase.from('ceo_dim').select('*');
+      if (error) {
+        console.error('Error fetching data:', error);
+        return;
+      }
+      allRows = data;
+      lastUpdated.textContent = new Date().toLocaleString();
+      renderTable();
+    }
+
+    // Filter tab clicks
+    filterTabs.addEventListener('click', e => {
+      if (e.target.tagName === 'BUTTON') {
+        document.querySelectorAll('#filterTabs button').forEach(b => b.classList.remove('border-purple-600', 'text-purple-600', 'font-semibold'));
+        e.target.classList.add('border-purple-600', 'text-purple-600', 'font-semibold');
+        activeFilter = e.target.dataset.filter;
+        renderTable();
+      }
+    });
+
+    // Show YouTube videos popup
+    function showVideos(name) {
+      const ceo = allRows.find(c => c.ceo_name === name);
+      if (!ceo) return;
+      // implement your popup logic here, similar to previous script
+      alert(`Videos for ${name}:\n${ceo.youtube_urls.join('\n')}`);
+    }
+
+    // Initial load
+    loadData();
+  </script>
 </body>
 </html>
