--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <!-- Supabase JS -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
 </head>
 <body class="bg-gray-100 font-sans">
   <div class="container mx-auto p-6">
@@ -68,7 +68,8 @@
 const SUPABASE_URL = 'https://qxnljpbxhugsawinluwq.supabase.co';  
 const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InF4bmxqcGJ4aHVnc2F3aW5sdXdxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTAwMTE2NjksImV4cCI6MjA2NTU4NzY2OX0.t1aG1JNeuanoOXKcs4CXLQALmLZiWCbdl9ICH2GVRu0';
     
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    // Initialize Supabase client
+const supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // DOM shortcuts
     const tbody = document.getElementById('ceoTableBody');
@@ -130,11 +131,13 @@ const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
 
     // Fetch data from Supabase
     async function loadData() {
-      const { data, error } = await supabase.from('ceo_dim').select('*');
+      const { data, error } = await supabaseClient.from('ceo_dim').select('ceo_name, company_name, ticker, ceo_start_date, total_stock_return, equity_ownership_pct, insider_score, youtube_urls, total_score');
       if (error) {
         console.error('Error fetching data:', error);
+        alert('Failed to load data. See console for details.');
         return;
       }
+      console.log('Fetched rows:', data);
       allRows = data;
       lastUpdated.textContent = new Date().toLocaleString();
       renderTable();
