--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
                         ${tsrBar}
                         <span class="tsr-text font-bold ${tsrTextColor}">${formattedTsr}</span>
                     </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${ceo.company}</td>
+                    <td class="px-6 py-4 text-sm text-gray-500 whitespace-normal">${ceo.company}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${ceo.ticker}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${ceo.industry}</td>
+                    <td class="px-6 py-4 text-sm text-gray-500 whitespace-normal">${ceo.industry}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${ceo.sector}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm">${filingsLink}</td>
                 `;
