--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
         </main>
         <footer class="text-center mt-8 text-sm text-gray-500">
-            <p>Data sourced from a public Google Sheet. This is a front-end demonstration.</p>
+            <p>TSR is Total Stock Return during CEO tenure. CEORater 2025.</p>
         </footer>
     </div>
 
