--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container mx-auto p-4 md:p-8">
         <header class="text-center mb-8">
             <h1 class="text-4xl md:text-5xl font-orbitron font-bold italic text-blue-600">CEORater</h1>
-            <p class="text-gray-600 mt-2 text-lg">NASDAQ 100 CEO Performance & Insider Analytics</p>
+            <p class="text-gray-600 mt-2 text-lg">NASDAQ 100 CEO Total Stock Return (TSR) & Insider Analytics</p>
         </header>
 
         <main class="bg-white rounded-xl shadow-lg p-4 sm:p-6">
