--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
     <link rel="icon" type="image/png" href="/CEORater favicon.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     
     <style>
         body {
