--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+    <link rel="manifest" href="/site.webmanifest">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
