--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CEORater</title>
@@ -8,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
+    
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -40,7 +49,6 @@
         </header>
 
         <main class="bg-white rounded-xl shadow-lg p-4 sm:p-6">
-            <!-- Controls: Search and Filters -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-4">
                 <input type="text" id="searchInput"
                     class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 transition-shadow lg:col-span-1"
@@ -69,22 +77,17 @@
             <div id="lastUpdated" class="text-xs text-gray-500 text-right mb-6 h-4"></div>
 
 
-             <!-- Loading Spinner -->
-            <div id="loading" class="flex justify-center items-center h-64">
+             <div id="loading" class="flex justify-center items-center h-64">
                 <div id="loading-spinner"></div>
             </div>
 
-             <!-- Error Message -->
-            <div id="error-message" class="hidden text-center text-red-500 font-medium py-8">
+             <div id="error-message" class="hidden text-center text-red-500 font-medium py-8">
                 <p>Could not load data from Google Sheets. Please ensure the sheet is published to the web and the link is correct.</p>
             </div>
 
-            <!-- Data Display Area -->
             <div>
-                <!-- CEO Cards View (for all screen sizes) -->
                 <div id="ceoCardView" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6">
-                    <!-- Cards will be inserted here by JavaScript -->
-                </div>
+                    </div>
 
                 <p id="noResults" class="text-center text-gray-500 py-8 hidden">No results found.</p>
             </div>
