--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <meta property="og:title" content="CEORater">
+    <meta property="og:description" content="NASDAQ 100 CEO Performance & Compensation Analytics">
+    <meta property="og:image" content="https://jmaietta.github.io/CEORater/android-chrome-512x512.png">
+    <meta property="og:url" content="https://jmaietta.github.io/CEORater/">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
