--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <meta property="og:title" content="CEORater">
     <meta property="og:description" content="NASDAQ 100 CEO Performance & Compensation Analytics">
-    <meta property="og:image" content="https://jmaietta.github.io/CEORater/android-chrome-512x512.png">
-    <meta property="og:url" content="https://jmaietta.github.io/CEORater/">
+    <meta property="og:image" content="https://www.ceorater.com/android-chrome-512x512.png">
+    <meta property="og:url" content="https://www.ceorater.com/">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
