--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
         </main>
         <footer class="text-center mt-8 text-sm text-gray-500">
-            <p>TSR is Total Stock Return during CEO tenure. CEORater 2025.</p>
+            <p>CEORater 2025. A TEK2day Holdings company.</p>
         </footer>
     </div>
 
