--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
           </svg>
           Continue with Google
         </button>
+
+        <button id="microsoftSignIn" class="w-full flex items-center justify-center gap-3 px-4 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition">
+          <svg class="w-5 h-5" viewBox="0 0 21 21">
+            <path fill="#f25022" d="M1 1h9v9H1z"></path>
+            <path fill="#00a4ef" d="M1 11h9v9H1z"></path>
+            <path fill="#7fba00" d="M11 1h9v9h-9z"></path>
+            <path fill="#ffb900" d="M11 11h9v9h-9z"></path>
+          </svg>
+          Continue with Microsoft
+        </button>
         
         <div class="relative">
           <div class="absolute inset-0 flex items-center">
@@ -183,6 +193,7 @@
     const loginModal = $("loginModal");
     const closeModal = $("closeModal");
     const googleSignIn = $("googleSignIn");
+    const microsoftSignIn = $("microsoftSignIn");
     const signInEmail = $("signInEmail");
     const signUpEmail = $("signUpEmail");
     const emailInput = $("emailInput");
@@ -478,6 +489,16 @@
         });
       });
 
+      microsoftSignIn.addEventListener('click', () => {
+        const provider = new firebase.auth.MicrosoftAuthProvider();
+        auth.signInWithPopup(provider).then(() => {
+          loginModal.classList.add('hidden');
+        }).catch(error => {
+          console.error('Microsoft sign in error:', error);
+          alert('Sign in failed: ' + error.message);
+        });
+      });
+      
       signInEmail.addEventListener('click', () => {
         const email = emailInput.value;
         const password = passwordInput.value;
