Update footer text

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </main>
 
-    <footer class="text-center mt-8 text-sm text-gray-500">TSR is Total Stock Return during CEO tenure · CEORater 2025</footer>
+    <footer class="text-center mt-8 text-sm text-gray-500">CEORater 2025. A TEK2day Holdings company.</footer>
   </div>
 
   <!-- ===== Login Modal ===== -->
