--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
         const avgCol = c.avgAnnualTsr >= 0 ? 'text-green-600' : 'text-red-600';
         const tsrAlphaCol = c.tsrAlpha >= 0 ? 'text-green-600' : 'text-red-600';
         const avgAlphaCol = c.avgAnnualTsrAlpha >= 0 ? 'text-green-600' : 'text-red-600';
+        const alphaScoreValue = c.alphaScore * 100;
         const alphaScoreColor = c.alphaScore >= 75 ? 'text-green-600' : c.alphaScore >= 25 ? 'text-blue-600' : 'text-red-600';
 
         card.innerHTML = `
