--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               </div>
               <div class="text-right pl-2">
                 <p class="text-xs text-gray-500 uppercase tracking-wider">AlphaScore</p>
-                <p class="text-3xl font-orbitron font-bold ${alphaScoreColor}">${c.alphaScore.toFixed(1)}</p>
+                <p class="text-3xl font-orbitron font-bold ${alphaScoreColor}">${Math.round(alphaScoreValue)}</p>
               </div>
             </div>
             <div class="mt-4 space-y-2 text-sm">
