--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         const tsrAlphaCol = c.tsrAlpha >= 0 ? 'text-green-600' : 'text-red-600';
         const avgAlphaCol = c.avgAnnualTsrAlpha >= 0 ? 'text-green-600' : 'text-red-600';
         const alphaScoreValue = c.alphaScore * 100;
-        const alphaScoreColor = c.alphaScore >= 75 ? 'text-green-600' : c.alphaScore >= 25 ? 'text-blue-600' : 'text-red-600';
+        const alphaScoreColor = 'text-blue-600';
 
         card.innerHTML = `
           <div>
