--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 <p class="text-sm text-gray-600">${c.company} (${c.ticker})</p>
               </div>
               <div class="text-right pl-2">
-                <p class="text-xs text-gray-500 uppercase tracking-wider">AlphaScore</p>
+                <p class="text-xs text-gray-800 font-bold uppercase tracking-wider">AlphaScore</p>
                 <p class="text-3xl font-orbitron font-bold ${alphaScoreColor}">${Math.round(alphaScoreValue)}</p>
               </div>
             </div>
