--- a/methodology.html
+++ b/methodology.html
@@ -88,7 +88,7 @@
       </div>
 
       <div class="text-center mt-8 pt-6 border-t">
-          <a href="/" class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition">Back to CEO Rankings</a>
+          <a href="/" class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition">Back to CEORater</a>
       </div>
 
     </main>
