--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -98,7 +97,13 @@
       </div>
     </main>
 
-    <footer class="text-center mt-8 text-sm text-gray-500">CEORater 2025. A TEK2day Holdings company.</footer>
+    <footer class="text-center mt-8 text-sm text-gray-500">
+      <p class="mb-2">
+        <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a>
+      </p>
+      <p>CEORater 2025. A TEK2day Holdings company.</p>
+    </footer>
+  
   </div>
 
   <div id="loginModal" class="hidden fixed inset-0 bg-black bg-opacity-50 modal z-50 flex items-center justify-center p-4">
